--- a/src/css/base.css
+++ b/src/css/base.css
@@ -84,21 +84,6 @@ main:has(.back-link) {
   }
 }
 
-.loader {
-  display: none;
-  width: 50px;
-  height: 50px;
-  border: 5px solid #ccc;
-  border-top-color: #0099ff;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-  margin: 20px auto;
-}
-
-.loader.visible {
-  display: block;
-}
-
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -163,4 +148,29 @@ main:has(.back-link) {
   line-height: 200%;
   letter-spacing: 0.04em;
   color: #2e2f42;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin: 32px auto;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.is-hidden {
+  display: none;
 }
