--- a/src/css/base.css
+++ b/src/css/base.css
@@ -159,7 +159,12 @@ main:has(.back-link) {
   display: inline-block;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
-  margin: 32px auto;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
 }
 
 @keyframes rotation {
